--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon_2.ico" type="image/x-icon">
     <title>Sarah Kirby | Developer & Designer Portfolio</title>
+    <meta name="description" content="Sarah Kirby is a front-end developer and designer from New Zealand living in London. She is on the look out for a creative front-end developer role, ideally working with JS frameworks such as React.">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap" rel="stylesheet">
   </head>
